# cadence

./: .env.example  .gitignore  README.md  agent.yaml  pyproject.toml
src/: __init__.py  agent.py  agentstore_adapter.py  backends.py  memory.py
src/prompts/: __init__.py  prioritizer.py
src/tui/: __init__.py  callbacks.py  console.py  live_display.py  themes.py
